[package]
name = "saber"
version = "0.1.0"
authors = ["Nicholas Yang <ny585@nyu.edu>"]
edition = "2018"

[dependencies]
base64 = "0.12.3"
bimap = "0.4.0"
byteorder = "1.3.1"
codespan-reporting = "0.9.5"
failure = "0.1.5"
failure_derive = "0.1.5"
im = "13.0.0"
itertools = "0.8.0"
leb128 = "0.2.4"
strum = "0.13.0"
strum_macros = "0.13.0"
serde = { version = "1.0.106", features = ["derive", "rc"] }
serde_json = "1.0"

