[package]
name = "saber"
version = "0.1.0"
authors = ["Nicholas Yang <ny585@nyu.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
base64 = "0.12.3"
bimap = "0.4.0"
byteorder = "1.3.1"
clap = "3.0.0-beta.1"
codespan-reporting = "0.9.5"
id-arena = "2.2.1"
im = "13.0.0"
indexmap = "1.7.0"
itertools = "0.8.0"
leb128 = "0.2.4"
strum = "0.13.0"
strum_macros = "0.13.0"
serde = { version = "1.0.106", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0.23"
wabt = "0.10.0"
walrus = "0.19.0"
wasmtime = "0.36.0"

